Got a basic particle system working when bacteria destroyed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <i> Demo </i>
 <!-- we write it here instead of head because we want to call the js after
 the canvas being initialized-->
+<script src = "particle.js"></script>
 <script src = "rendering.js"></script>
 <script src = "circle.js"></script>
 <script src = "bacteria.js"></script>
