Added Score tracking and win conditions to the game

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 <canvas id="game-surface" width="800" height="600"> your browser does not support HTML5</canvas>
 <br />
 <i> Demo </i>
+<p id = "bacteriaScore" style="font-size: x-large;">Player Score: 0</p>
+<p id = "playerScore" style="font-size: x-large;">Bacteria Score: 0</p>
 <!-- we write it here instead of head because we want to call the js after
 the canvas being initialized-->
 <script src = "particle.js"></script>
+<script src = "score.js"></script>
 <script src = "rendering.js"></script>
 <script src = "circle.js"></script>
 <script src = "bacteria.js"></script>
