Added poison and collision with bacteria

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ the canvas being initialized-->
 <script src = "rendering.js"></script>
 <script src = "circle.js"></script>
 <script src = "bacteria.js"></script>
+<script src ="poison.js"></script>
 <script src = "index.js"></script>
 </body>
 </html>
